--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--header-->
     <header>
         
             <a href="./index.html"><span>Web</span>Studio</a>
@@ -65,15 +66,34 @@
         <!--Our team-->
         
         <section>
-            <h1>Our Team</h1>
+            <h2>Our Team</h2>
             <div>
-                <img src="./images/img.jpg" alt="">
+                <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </div>
+            <div>
+                <img src="./images/img-2.jpg" alt="Tom Ford" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </div>
+            <div>
+                <img src="./images/img-3.jpg" alt="Camila Garcia" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </div>
+            <div>
+                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
             </div>
         </section>
 
     </main>
-
+    <!--footer-->
     <footer>
+        <a href="./index.html"><span>Web</span>Studio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </footer>
 </body>
