--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
         <section>
             <h2>Our Team</h2>
             <div>
-                <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264">
+                <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </div>
             <div>
-                <img src="./images/img-2.jpg" alt="Tom Ford" width="264">
+                <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </div>
             <div>
-                <img src="./images/img-3.jpg" alt="Camila Garcia" width="264">
+                <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </div>
             <div>
-                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264">
+                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </div>
