--- a/index.html
+++ b/index.html
@@ -35,31 +35,33 @@
         <!--order service-->
 
         <section>
-            <div>
-                <h1>Effective Solutions for Your Business</h1> 
-                <button type="button">Order Service</button>
-            </div>
+
+            <h1>Effective Solutions for Your Business</h1> 
+            <button type="button">Order Service</button>
+
         </section>
 
         <!--Feature-->
 
         <section>
-            <div>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            </div>
-            <div>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </div>
-            <div>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </div>
-            <div>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </div>
+           <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
 
         </section>
 
@@ -67,26 +69,29 @@
         
         <section>
             <h2>Our Team</h2>
-            <div>
-                <img src="./images/img-1.jpg" alt="Mark Guerrero" width="264" height="260">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </div>
-            <div>
-                <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </div>
-            <div>
-                <img src="./images/img-3.jpg" alt="Camila Garcia" width="264" height="260">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </div>
-            <div>
-                <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </div>
+            <ul>
+                <li>
+                    <img src="./images/img-1.jpg" alt="A brunette man with a beard" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img-2.jpg" alt="A brown-haired man smiles" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img-3.jpg" alt="Brunette woman with long hair" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-4.jpg" alt="A brunette man in a t-shirt" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+         
         </section>
 
     </main>
