--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <!--header-->
     <header>
         
-            <a href="./index.html"><span>Web</span>Studio</a>
+           
             <nav>
+                <a href="./index.html">WebStudio</a>
                 <ul>
                     <li><a href="#studio">Studio</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
@@ -44,6 +45,7 @@
         <!--Feature-->
 
         <section>
+            <h2>Feauture</h2>
            <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -97,7 +99,7 @@
     </main>
     <!--footer-->
     <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
     </footer>
